@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+- pts_Graph: Show min/max results on multi-way comparisons
+
 Phoronix Test Suite 6.4.0-Hasvik
 2 June 2016
 
